--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,11 @@
       <artifactId>jackson-module-jsonSchema</artifactId>
       <version>2.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.javaparser</groupId>
+      <artifactId>javaparser-core</artifactId>
+      <version>3.2.5</version>
+    </dependency>
+
   </dependencies>
 </project>
